DBTOOLS-1690 fixed ignore column order option